# logistic-map-lab

./: LICENSE  README.md  pyproject.toml
logisticlab/: __init__.py  cli.py  core.py  gallery.py  svg.py
notebooks/: period_doubling_feigenbaum.ipynb  period_scan_sensitivity.ipynb
reports/: period-doubling-and-feigenbaum.md  period-scan-sensitivity.md
scripts/: generate_gallery.py
tests/: test_core.py
