[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "logistic-map-lab"
version = "0.1.0"
description = "Pure-Python logistic map experiments with generated SVG figures"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Jarbas" }]
license = { text = "MIT" }
keywords = ["chaos", "dynamical-systems", "logistic-map", "svg"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Mathematics",
]

[tool.setuptools.packages.find]
include = ["logisticlab*"]
